2014-11-12  Stipe Tolj  <stolj at kannel.org>
    * doc/userguide.xml: added 'instances' to 'group = smsc' context.
    * gw/[bb_]smscconn.[ch]: allow multiple instances to be created via the
      corresponding config directive.
    * gwlib/cfg.def: added 'instances' to 'group = smsc' context.
    [Msg-Id: <5452797C.2020207@kannel.org>]
    
2014-11-12  Stipe Tolj  <stolj at kannel.org>
    * doc/userguide.xml: document new config directives and declare deprecates.
    * gw/bb_boxc.c: handle SMSCCONN_FAILED_REJECTED response for routing.
    * gw/bb_smscconn.c: crean the white/black listing handling to support 
      sender/receiver side testing.
    * gwlib/cfg.def: add new white/black listing config directives.
    [Msg-Id: <54525E66.1020308@kannel.org>]
    
2014-11-11 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_smpp.c: allow overwrite of source_addr ton/npi on message basis via meta_data

2014-11-06 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smpp_pdu.c: added check fo defined fields and print error only if it's unknown TLV

2014-11-06  Stipe Tolj  <stolj at kannel.org>
    * gwlib/dbpool_mysql.c: handle temporary error codes, mainly for InnoDB's
      lock handling for mysql_stmt_execute() calls, which are rolled back and
      then need to be retried by the application side, according to error code
      references at http://dev.mysql.com/doc/refman/5.0/en/innodb-error-codes.html.
      
2014-10-22 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_smpp.c, gw/dlr.h: dropped SMPP specific intermediate dlr mask
      and replaced it with abstracted buffered.

2014-10-13  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_fake.c, test/fakesmsc.c: add UCS-2 (Unicode) support for MO
      messages withing FAKE SMSC type.
      
2014-10-13 Alexander Malysh <amalysh at kannel.org>
    * gw/meta_data.h: added SMPP group

2014-10-13 Alexander Malysh <amalysh at kannel.org>